--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
+    "koa-qs": "^3.0.0",
     "taskwarrior-lib": "^0.2.0"
   },
   "devDependencies": {
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-logger": "^3.1.1",
+    "@types/koa-qs": "^2.0.0",
     "@types/koa-router": "^7.4.1",
     "@types/koa__router": "^8.0.2",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
