--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,12 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.10",
     "@nuxtjs/axios": "^5.11.0",
+    "@nuxtjs/proxy": "^2.0.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "nuxt": "^2.13.0"
+    "@vue/composition-api": "^1.0.0-beta.1",
+    "lodash": "^4.17.15",
+    "nuxt": "^2.13.0",
+    "nuxt-typed-vuex": "^0.1.19"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^1.0.3",
@@ -22,8 +26,10 @@
     "@nuxtjs/eslint-config-typescript": "^2.0.0",
     "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/vuetify": "^1.11.2",
+    "@types/lodash": "^4.14.157",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.2.0",
-    "eslint-plugin-nuxt": "^1.0.0"
+    "eslint-plugin-nuxt": "^1.0.0",
+    "taskwarrior-lib": "^0.2.0"
   }
 }
