--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,8 +25,11 @@
     },
     "types": [
       "@types/node",
-      "@nuxt/types"
-    ]
+      "@nuxt/types",
+      "@nuxtjs/axios",
+      "@nuxtjs/vuetify"
+    ],
+		"typeRoots": ["./node_modules/@types", "./types"]
   },
   "exclude": [
     "node_modules",
