fix: fix nginx conf path

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ error_log /var/log/nginx/error.log warn;
 
 # Uncomment to include files with config snippets into the root context.
 # NOTE: This will be enabled by default in Alpine 3.15.
-include /etc/nginx/conf.d/*.conf;
+#include /etc/nginx/conf.d/*.conf;
 
 events {
 	# The maximum number of simultaneous connections that can be opened by
@@ -98,5 +98,5 @@ http {
 
 
 	# Includes virtual hosts configs.
-	include /etc/nginx/http.d/*.conf;
+	include /etc/nginx/conf.d/*.conf;
 }
