--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS=--openssl-legacy-provider nuxt",
+    "dev": "nuxt",
     "build": "nuxt-ts build",
     "start": "nuxt-ts start",
     "export": "nuxt-ts export",
@@ -23,7 +23,9 @@
     "nuxt": "^2.14.7",
     "nuxt-typed-vuex": "^0.1.22",
     "typeface-open-sans": "1.1.13",
-    "url-regex-safe": "^2.0.2"
+    "url-regex-safe": "^2.0.2",
+    "vue-server-renderer": "^2.6.14",
+    "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.7",
@@ -37,6 +39,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.12.1",
     "eslint-plugin-nuxt": "^1.0.0",
-    "taskwarrior-lib": "^0.4.2"
+    "taskwarrior-lib": "^0.4.2",
+    "vuetify-loader": "^1.9.2"
   }
 }
