--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "@vue/composition-api": "^1.0.0-beta.18",
     "lodash": "^4.17.20",
     "moment": "^2.29.4",
-    "normalize-url": "^6.0.1",
+    "normalize-url": "4.5.1",
     "nuxt": "^2.14.7",
     "nuxt-typed-vuex": "^0.1.22",
     "typeface-open-sans": "1.1.13",
