refactor: update nuxt.js and composition api

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,9 @@
     "@mdi/font": "^5.8.55",
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/composition-api": "^0.33.1",
     "@nuxtjs/proxy": "^2.0.1",
     "@nuxtjs/pwa": "^3.2.2",
-    "@vue/composition-api": "^1.0.0-beta.18",
     "lodash": "^4.17.20",
     "moment": "^2.29.4",
     "normalize-url": "4.5.1",
