--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -35,6 +35,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: dcsunset/taskwarrior-webui:latest,dcsunset/taskwarrior-webui:${{ steps.date.outputs.date }}
+          tags: dcsunset/taskwarrior-webui:3,dcsunset/taskwarrior-webui:${{ steps.date.outputs.date }}
